--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,7 @@
-networkx==3.2.1
+matplotlib==3.7.1
+networkx==3.1
+numpy==1.24.3
+PyQt5==5.15.11
+PyQt5_sip==12.15.0
+python-constraint==1.4.0
 vpython==7.6.5
